# translation

./: .gitignore  README.md  pyproject.toml
translation/: __init__.py  __main__.py
